<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Мой Дом</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about_us">О нас</string>
    <string name="verona">VERONA1024</string>

    <string name="widget_name">Мой Дом</string>

    <string name="house_temperature">Температура:</string>
    <string name="house_light">Свет:</string>
    <string name="wetness">Влажность:</string>

    <string name="no_data">нет данных</string>
    <string name="on">включено</string>
    <string name="off">выключено</string>

    <string name="gradus">°C</string>
    <string name="faringate">°F</string>

    <string name="percent">%</string>

    <color name="primary">#056F00</color>
    <color name="primary_dark">#0D5302</color>
    <color name="accent">#220099</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="windowBackGroung">#CCCCCC</color>
    
    <string name="companyText">Умный дом - уютный дом.</string>
    <string name="aboutCompany">Приложение разработато компанией verona1024 ©. Приложение является пультом управления системой \"умный и
уютный дом\". В случае возникновения вопросов свяжитесь с нами: verona1024corp@gmail.com. \n\n All rights reserved 2015</string>

    <string name="main_screen_info">Просмотр</string>
    <string name="main_screen_lights">Свет</string>
    <string name="main_screen_music">Музыка</string>
    <string name="main_screen_statistic">Статистика</string>
    <string name="main_screen_plans">Комфорт</string>
    <string name="main_screen_security">Охрана</string>

    <string name="balcon_no">Балкон закрыт</string>
    <string name="balcon_yes">Балкон открыт</string>
    <string name="window_no">Окна закрыты</string>
    <string name="window_yes">Открытых окон: </string>
    <string name="doors_no">Двери закрыты</string>
    <string name="doors_yes">Открытых дверей: </string>
    <string name="lights_no">Свет выключен</string>
    <string name="lights_yes">Свет включен</string>

    <string name="httpGetStatus">http://192.168.1.177/status</string>
    <string name="httpGetLightOn">http://192.168.1.177/lighton</string>
    <string name="httpGetLightOff">http://192.168.1.177/lightoff</string>

    <string name="ok">Ок</string>


</resources>
