<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/widget_default_background"
    android:padding="2px"
    android:paddingRight="5px"
    android:weightSum="1">

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/widgetButton"
        android:src="@drawable/widget_button"
        android:background="@null"
        android:layout_gravity="center_vertical"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_weight=".25"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/house_temperature"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wetness"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/house_light"
            android:id="@+id/textView3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".25">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_data"
            android:id="@+id/textWidgetTemperature"
            android:layout_marginRight="5dp"
            android:gravity="right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_data"
            android:id="@+id/textWidgetWetness"
            android:layout_marginRight="5dp"
            android:gravity="right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_data"
            android:id="@+id/textWidgetLights"
            android:layout_marginRight="5dp"
            android:gravity="right" />
    </LinearLayout>
</LinearLayout>