<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/main_window_logo"
        android:background="@null"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/companyText"
        android:id="@+id/textView"
        android:textColor="@color/primary_dark_material_light"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButtonInformation"
                android:src="@drawable/widget_button"
                android:background="@null"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/main_screen_info"
                android:textColor="@color/primary_dark_material_light"
                android:id="@+id/textViewInformationItemDoors" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButtonLights"
                android:src="@drawable/widget_button"
                android:background="@null"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/main_screen_lights"
                android:textColor="@color/primary_dark_material_light"
                android:id="@+id/textViewInformationItemWindows" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton4"
                android:src="@drawable/widget_button"
                android:background="@null"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageButton"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/main_screen_music"
                android:textColor="@color/primary_dark_material_light"
                android:id="@+id/textView2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton5"
                android:src="@drawable/widget_button"
                android:background="@null"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/main_screen_statistic"
                android:textColor="@color/primary_dark_material_light"
                android:id="@+id/textViewInformationItemBalcon" />
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton6"
                android:src="@drawable/widget_button"
                android:background="@null"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/main_screen_plans"
                android:textColor="@color/primary_dark_material_light"
                android:id="@+id/textViewInformationItemTemperature" />
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButtonSecurity"
                android:src="@drawable/widget_button"
                android:background="@null"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/main_screen_security"
                android:textColor="@color/primary_dark_material_light"
                android:id="@+id/textViewInformationItemwetnes" />
            </LinearLayout>
    </LinearLayout>

</LinearLayout>